<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.gobowl.LoginActivity"
    android:background="@color/white"
    android:clickable="true"
    android:focusableInTouchMode="true" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loginMainTitle"
        android:id="@+id/tvLoginMainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvLoginMainTitle"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="225dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/gobowl_logo"
                android:id="@+id/ivLogo"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/layoutRole">

            <TextView
                android:layout_width="@dimen/login_title_right_margin"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/loginRoleTitle"
                android:id="@+id/tvRole"/>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rgRole"
                android:gravity="center_vertical|left">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginRbCustomer"
                    android:id="@+id/rbCustomer"
                    android:checked="true"
                    android:layout_marginRight="@dimen/login_customer_role_right_margin" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginRbManager"
                    android:id="@+id/rbManager"
                    android:checked="false" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/layoutUsername">

            <TextView
                android:layout_width="@dimen/login_title_right_margin"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/loginEmailTitle"
                android:id="@+id/tvEmail" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:hint="@string/loginHintEmail"
                android:layout_weight="1"
                android:editable="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginButtonSignIn"
                android:id="@+id/buttonSignIn"
                android:onClick="handleClick" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false"
            android:clickable="false"
            android:gravity="center|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/loginForgotEmail"
                android:id="@+id/forgotUsername"
                android:clickable="true"
                android:textSize="16dp"
                android:onClick="handleClick" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/loginNeedAccount"
                android:id="@+id/needAccount"
                android:clickable="true"
                android:gravity="right"
                android:textSize="16dp"
                android:onClick="handleClick" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
