...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mngrMainTitle"
        android:id="@+id/tvManagerMainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
...
            android:gravity="center_horizontal|bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mngrButtonNewCustomer"
                android:id="@+id/buttonNewCustomer"
                android:onClick="handleClick" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mngrButtonPrintCard"
...
